// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`end game cutscene collected as single frame 1`] = `
{
  "dl": [
    [
      [
        "cga_summary",
        16384,
        "ae1e445120a133913d346baa20c9c3239ac449cceba470ea729b2c7d378ee131",
      ],
      [],
    ],
  ],
  "sound_summary": [
    48000,
    1,
    217513,
    "f432a6fea407a76b4bf1e8bb8d5a6567c3026c7fe869fec7dca62beb2182d49d",
  ],
}
`;

exports[`end game cutscene engine output 1`] = `
[
  [
    "cga_clear",
  ],
  [
    "clock",
    1293447,
  ],
  [
    "cga_wr_summary",
    15361,
    8377792,
    "384cb24959c737496ee3293c5695e9586b98b078bc73b39d325c1425109ceb7c",
  ],
  [
    "return_from_run",
  ],
  [
    "speaker_summary",
    173,
    1075558,
    "1ba4041ff7f9ee40d81fc5304fa19a8bb505b5cf41b86fbc39a48967a1c2161e",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    308,
    41245,
    "6db5f101d2f9a7af078ecda65c71a511826a318b849fe2f5b4da79d88eba7966",
  ],
  [
    "speaker_summary",
    186,
    1076532,
    "64f876dc1bb2909cbfdc4e241b8c1284af7658983a4d2f4c5993d052e63d0579",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    309,
    43352,
    "d94e3b855da31916ed13bf8c85d6faf546eaabf20f42803d93bdc3d12b2844a5",
  ],
  [
    "speaker_summary",
    202,
    1077236,
    "edd66fbf39128b0142d34fe02d2b8a6a1e7998a2706399922d05f9907f1a7fdd",
  ],
  [
    "return_from_run",
  ],
  [
    "clock",
    909424,
  ],
  [
    "cga_wr_summary",
    8000,
    206835,
    "554e3884fb14bb74948c59502278c0b268a54965c01ffa721ed90c6844615621",
  ],
  [
    "speaker_summary",
    222,
    1077773,
    "1c9a4c52053e924924b7ad9fd6563939ae40b019289a9de9a2c11fcfeb06012e",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    310,
    39942,
    "772c05f21ae74663b009c1266cf236b182de56fbc217835de95b298082aef3f4",
  ],
  [
    "speaker_summary",
    246,
    1079172,
    "5d2d62a22ddbe7b66a72f5fe1290504fb8dc6dc6266e2914e9357acfdc692414",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    308,
    41245,
    "34e1bdd506eddc060ebb98a11c082a5cd3b02fb46250ee91bd95e7b4ae6f420e",
  ],
  [
    "speaker_summary",
    274,
    1080404,
    "1ed7cc53eb8d1c7f11144ca4d919766a8657613f06c9511504d99da0117e48ed",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    312,
    40722,
    "7fcb3f6bbe5e472969041a4107be1d05d3b8ec148901af81233f2d4eaf09ddef",
  ],
  [
    "speaker_summary",
    314,
    1082164,
    "005429f3e6256d1559ed3a75d2c84fd69a6f9939985a151b776649b2ed4360b8",
  ],
  [
    "return_from_run",
  ],
  [
    "clock",
    809955,
  ],
  [
    "cga_wr_summary",
    8000,
    206835,
    "e41f2fdfbb2f67075efd9e63a23209b863c677e3844fb230017d2a19657bd543",
  ],
  [
    "speaker_summary",
    363,
    1083977,
    "1014cc0096d2d0e352d5e55b2ba1becf37a5bb7c4dc5250b6fd1af909726b89c",
  ],
  [
    "return_from_run",
  ],
  [
    "clock",
    9540004,
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    154,
    16135,
    "73278d21302819e94b549bf1113572585e78c8b1f9d71a10c3613bceb98e1f6d",
  ],
  [
    "speaker_summary",
    434,
    1087444,
    "c3b895e8bdad9f2cba6eef14b2e09c060196a2da0b3c79a0019eddee71b93845",
  ],
  [
    "return_from_run",
  ],
  [
    "clock",
    9540004,
  ],
  [
    "return_from_run",
  ],
  [
    "clock",
    748066,
  ],
  [
    "cga_wr_summary",
    8000,
    206835,
    "db53c2a0f13b3ff6c95d4d5edb92f592ba23f92653b21a314f886c17bff1beda",
  ],
  [
    "exit",
    0,
  ],
  [
    "clock",
    59,
  ],
  [
    "return_from_run",
  ],
]
`;

exports[`new game cutscene collected as single frame 1`] = `
{
  "dl": [
    [
      [
        "cga_summary",
        16384,
        "a62f52a0d553c323b9e17517335924dc69532f8554453d73ffb7dedf202e307e",
      ],
      [],
    ],
  ],
  "sound_summary": [
    48000,
    1,
    768759,
    "ea01f69b620df7abaf5c38bc04052bc314ef179eac36caa688249f7da8723135",
  ],
}
`;

exports[`new game cutscene engine output 1`] = `
[
  [
    "cga_clear",
  ],
  [
    "clock",
    637674,
  ],
  [
    "cga_wr_summary",
    15361,
    10762788,
    "6ca2536f175070f42f2b0dc1a58ea618f5f6bdee8661a35c4300b0d0f46854e3",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    887,
    150396,
    "2fd6e13233b162d0ec002c1344d146afd58312e4126fce680f30c8a917ae5cac",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341916,
  ],
  [
    "speaker_summary",
    429,
    2380594,
    "46d72e3a696cae8d6f096a53b23bf86188fd808b66be150d46f6ad33e031f184",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    429,
    2380594,
    "46d72e3a696cae8d6f096a53b23bf86188fd808b66be150d46f6ad33e031f184",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    2180,
    288278,
    "bbf04a5ff671732a28cfecffd039033c5c3c1955a237f7968e413462b2431da0",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341912,
  ],
  [
    "speaker_summary",
    225,
    420901,
    "a474fe4a5eca0ee617e5f90adb2add329024854188e96c82013ec2082d8b6a4a",
  ],
  [
    "return_from_run",
  ],
  [
    "clock",
    4770004,
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    1420,
    2438907,
    "dbed5dedfb6a227fed8150ff0b1509d074febb24ec76ac59ef3f803d73ea0d6b",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    1420,
    2438907,
    "dbed5dedfb6a227fed8150ff0b1509d074febb24ec76ac59ef3f803d73ea0d6b",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    1528,
    2606829,
    "18a6c97c629c2b43347714e273b1cf6cad9a910fd010c9f5e9d3fcb365483465",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    3076,
    398978,
    "d7cfb3c49fff089cd327e80ac40f5fb4934e410f661675af1dddac811594f665",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341903,
  ],
  [
    "speaker_summary",
    4546,
    8803711,
    "2eaa4616f4c96355bbe9799b3e21484f74f7df7edfc5d8f35ec0ab963ae6f587",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    2060,
    272154,
    "1d3538a423a151e3d8b0a0bd11a4d3c27e96f0dffa0f58812599dd69c7ca5e5c",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341916,
  ],
  [
    "speaker_summary",
    95,
    168428,
    "4d37d02bf8c2fab1ffb7f3768f73296d0a37a67bd0d159e09383e12ccafc7d91",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    1420,
    2438907,
    "dbed5dedfb6a227fed8150ff0b1509d074febb24ec76ac59ef3f803d73ea0d6b",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    1420,
    2438907,
    "dbed5dedfb6a227fed8150ff0b1509d074febb24ec76ac59ef3f803d73ea0d6b",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    2641,
    3803351,
    "0ad5c1c82bf64155644019f603fd0df1e34ceac63d3bc3e950960b57ce34a07c",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    1822,
    224115,
    "4bf7020d6d47d82bdc797a0d9ad7acd5050c176de83dd5611a302f1ecca2e142",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341903,
  ],
  [
    "speaker_summary",
    2191,
    5012686,
    "e09dc669b7fa0425b0748b06d2ca38c3a17ddc55835c7bd66680b79487fe6c58",
  ],
  [
    "return_from_run",
  ],
  [
    "clock",
    937642,
  ],
  [
    "cga_wr_summary",
    8000,
    206835,
    "ee47731491ec8e8a33ad3acfb1c74f1f18db64dd6a2588e8f8c2a3c7b14bbbde",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341573,
  ],
  [
    "speaker_summary",
    363,
    606543,
    "123cafab20d92db05385cbd55b2263e10a3eec2e17f252369a00a2c48ae69441",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    698,
    86942,
    "6bcacad0ed796398d63f8348c1d47f86e7d9fe6d192a1a7bfae7b81fca18450f",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341913,
  ],
  [
    "speaker_summary",
    300,
    603771,
    "578556b4014c0ff2cb26b610f8f103bc4805f5061d68cbeb5b7c09f6761a36de",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    689,
    79787,
    "9966e1f40344276663c80997d0f8f6783b0e00666499051a2bb43a2d1130c7c5",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341913,
  ],
  [
    "speaker_summary",
    274,
    602627,
    "9fc983d7410b3681b5e2f038cd4a85d3cc072c861609f2c61fda0b75d00183bf",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    681,
    76145,
    "807138ef9f44e3b18cddfac7bd918ffa93e1ebf1160b6622d11e945717861aac",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341913,
  ],
  [
    "speaker_summary",
    238,
    601043,
    "c7e23a8789fcff7fa69bce6cec89cd4d0035f5150b156ca1a5f027572cd8b2ad",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    767,
    89516,
    "2cc5515e48dfa0e87c4a72bbbb2e2d12d6eb164317e658a1c76f1f5f01982e62",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341930,
  ],
  [
    "speaker_summary",
    222,
    600339,
    "10cb207300efd4c98092486cdd1fc9faf57b1144923c4beedd2fa2cc3f65fba4",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    760,
    85460,
    "ff403057deef2aa11fb78e47fb20fc5d08bfc4df94f09c1aefc6ab317d2433fa",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341913,
  ],
  [
    "speaker_summary",
    197,
    599239,
    "f8eff52db3ac8a8430a59ee90cfeac39dd3b83c3d36802fa621109486db3d5fb",
  ],
  [
    "return_from_run",
  ],
  [
    "clock",
    1152969,
  ],
  [
    "cga_wr_summary",
    8000,
    206835,
    "d19b68ebe90a3bbc2fe0cba4d06a62485f3fb1fe15ed396822c7d4cc8500285a",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341587,
  ],
  [
    "speaker_summary",
    186,
    598755,
    "4692c74fff85f55fad95241727c8135e469d8e960d8e770d07961fee301d1332",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    690,
    84994,
    "3f9b220279a462424e8095e21880c7b3bab21a680651d6442ff07bb85603a140",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341913,
  ],
  [
    "speaker_summary",
    168,
    597963,
    "c5c7e079431524cee08767819028290a4c62c7e8da5fe1e327e9affad426c1b4",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    717,
    89562,
    "6378c6f73e053eb6ca65575b24f086fc5b9a01cc377e5a93975699b05c485647",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341913,
  ],
  [
    "speaker_summary",
    162,
    597699,
    "254308602b98f4c01937a36fb3cfc812b36622f9a1f735b1951d72555507d151",
  ],
  [
    "return_from_run",
  ],
  [
    "cga_wr_summary",
    365,
    40224,
    "35d8edd06e791553d55a2ced6897de702e96b08b7952972d8d514922004cb2e7",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341913,
  ],
  [
    "speaker_summary",
    148,
    597083,
    "636e776fd478fb2f46fb88fddfe524ff039ed4de504a265d4eb203e1321ee866",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341528,
  ],
  [
    "speaker_summary",
    663,
    3701610,
    "21c4e6122c1caf1107c1ae2d003894264d123fce4bc634dcd9e94a99386d1013",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    546,
    3041102,
    "c2af6f01b06dc00ee8cc5568723f157dd42e9b2930ded949d10a06abebad3a42",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    429,
    2380594,
    "46d72e3a696cae8d6f096a53b23bf86188fd808b66be150d46f6ad33e031f184",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    429,
    2380594,
    "46d72e3a696cae8d6f096a53b23bf86188fd808b66be150d46f6ad33e031f184",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    429,
    2380594,
    "46d72e3a696cae8d6f096a53b23bf86188fd808b66be150d46f6ad33e031f184",
  ],
  [
    "return_from_run",
  ],
  [
    "check_joystick",
  ],
  [
    "clock",
    341514,
  ],
  [
    "speaker_summary",
    429,
    2380594,
    "46d72e3a696cae8d6f096a53b23bf86188fd808b66be150d46f6ad33e031f184",
  ],
  [
    "return_from_run",
  ],
  [
    "stack",
    [
      "cs:2dc",
    ],
  ],
  [
    "exit",
    0,
  ],
  [
    "clock",
    63,
  ],
  [
    "return_from_run",
  ],
]
`;
